force-app/main/default/objects/Custom_Upgrade_Source__c/Custom_Upgrade_Source__c.object-meta.xml
<CustomObject>
    <label>Custom Upgrade Source</label>
    <nameField>
        <label>Custom Upgrade Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Upgrade Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>