force-app/main/default/objects/Custom_Upgrade_Source__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active, for new mapping of Hardware.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>