force-app/main/default/objects/Custom_Upgrade_Source__c/fields/Display_Index__c.field-meta.xml
<CustomField>
    <fullName>Display_Index__c</fullName>
    <label>Display Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>