force-app/main/default/objects/Custom_Upgrade_Source__c/fields/UpgradeProduct__c.field-meta.xml
<CustomField>
    <fullName>UpgradeProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upgrade product.</description>
    <inlineHelpText>Specify the product to upgrade to.</inlineHelpText>
    <label>Upgrade Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Upgrade Sources</relationshipLabel>
    <relationshipName>UpgradeSources</relationshipName>
    <type>Lookup</type>
</CustomField>