force-app/main/default/objects/Custom_Upgrade_Source__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Polaris 2.0</fullName>
            </value>
            <value>
                <fullName>Polaris 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>